--- a/style.css
+++ b/style.css
@@ -145,15 +145,15 @@ button:hover { transform: translateY(-3px); }
     background-color: rgba(255, 255, 255, 0.2);
     border: 4px solid #ffdb00;
     margin-bottom: 20px;
-    position: relative; /* Important pour positionner le remplissage */
+    position: relative; 
     overflow: hidden;
 }
 
 #progress-bar-fill {
     height: 100%;
-    width: 0%; /* Commence vide */
-    background-color: #00ff08; /* Vert par défaut */
-    transition: width 0.5s ease-in-out; /* Animation fluide de la largeur */
+    width: 0%;
+    background-color: #00ff08; 
+    transition: width 0.5s ease-in-out; 
 }
 
 
